Overflow causing issues in FF.

--- a/views/css/screen.scss
+++ b/views/css/screen.scss
@@ -122,7 +122,6 @@ h2 { font-size: 16px; margin-bottom: 10px; }
 
   ol#timestep {
     width: 100%; height: 100%;
-    overflow: hidden;
     > li {
       display: block; position: absolute;
       background-color: #1b1b1b; border: 1px solid #000;
